.provarCaches/00D410000011HE0EAM/objects/rstk__sopackdtl__c.object
<CustomObject>
    <description>sopackdtl__c</description>
    <fields>
        <fullName>rstk__sopackdtl_qty__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopackdtl_seq__c</fullName>
        <label>Print Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopackdtl_sopackline__c</fullName>
        <label>Packing Slip Line</label>
        <referenceTo>rstk__sopackline__c</referenceTo>
        <relationshipLabel>Packing Slip Print Details</relationshipLabel>
        <relationshipName>sopackdtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sopackdtl_text__c</fullName>
        <label>Print Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Packing Slip Print Detail</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packing Slip Print Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>